--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2 class="exp-title">Experience</h2>
         <div class="row">
           <div class="col-md-5">
-            <img class="aboutImage" src="images/placeholder.jpg" />
+            <img class="aboutImage" src="images/itpic.PNG" />
           </div>
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
@@ -106,9 +106,15 @@
               <ul>
                 <li>I collaborated with professional software engineers to develop my Information Technology portfolio/website which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
                 <li>I am currently earning my Google Information Technology Support Professional Certificate which will assist me with displaying my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills in professional environments.</li>
-                <li>After earning my Google Information Technology Support Professional Certificate, I will obtain my CompTIA Network+ certificate and my CompTIA Security+ certificate. My plan is to also attend Western Governors University, to get my bachelor's degree in Cybersecurity and Information Assurance by 2025, so I can successfully transition into a Cybersecurity Analyst role.</li>
               </ul>
             </p>
+            <p class="recents">
+              My 3-year plan:
+              <ul>
+              <li>After earning my Google Information Technology Support Professional Certificate, I will obtain my CompTIA Network+ certificate and my CompTIA Security+ certificate. 
+              <li>I will also attend Western Governors University to get my bachelor's degree in Cybersecurity and Information Assurance. My goal is to graduate in 2025 so I can successfully transition into a Cybersecurity Analyst role.</li></li>
+            </ul>
+          </p>
           </div>
         </div>
         <div class="my-stack">
