--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <img src="images/pexels-stefan-coders-2064586.jpg" alt="ide" />
           <img src="images/pexels-tima-miroshnichenko-5380664.jpg" alt="ide" />
           <img src="images/pexels-tima-miroshnichenko-5380596.jpg" alt="ide" />
+          <img src=images/pexels-pixabay-270700.jpg alt="ide" />
         </div>
       </div>
       <div class="titleMessage">
@@ -105,13 +106,13 @@
               My most recent technical accomplishments:
               <ul>
                 <li>I collaborated with professional software engineers to develop my Information Technology portfolio/website which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
-                <li>I am currently earning my Google Information Technology Support Professional Certificate which will assist me with displaying my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills in professional environments.</li>
+                <li>I am currently studying for my CompTIA Network+ certification and I will also start my Google Information Technology Support Professional Certificate on March 29, 2023 using Coursera. These certifications will assist me with displaying my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills in professional environments.</li>
               </ul>
             </p>
             <p class="recents">
               My 3-year plan:
               <ul>
-              <li>After earning my Google Information Technology Support Professional Certificate, I will obtain my CompTIA Network+ certificate and my CompTIA Security+ certificate. 
+              <li>After earning my Google Information Technology Support Professional Certificate and my CompTIA Network+ certificate my next certification to obtain will be the CompTIA Security+ certificate. 
               <li>I will also attend Western Governors University to get my bachelor's degree in Cybersecurity and Information Assurance. My goal is to graduate in 2025 so I can successfully transition into a Cybersecurity Analyst role.</li></li>
             </ul>
           </p>
@@ -415,7 +416,7 @@
         <div class="contact-wrap">
         <div class="contactButtons">
         <a
-          href="https://www.linkedin.com/in/marissa-mack-pm/"
+          href="https://www.linkedin.com/in/marissa-mack-infotech/"
           target="_blank"
           class="contactButton"
           ><i class="fa-brands fa-linkedin"></i
@@ -429,11 +430,10 @@
         ></a></div>
         <div class="contactButtons">
         <a
-          href=""
+          href="https://www.reddit.com/user/MarissaMackIT"
           target="_blank"
           class="contactButton"
-          ><i class="fa-brands fa-twitter"></i
-        ></a></div>
+          ><i class="fa-brands fa-reddit"></i></a></div>
         <!-- <div class="contactButtons">
         <a
           href="https://jerrymackjobs.slack.com"
