"update intro paragraph"

--- a/index.html
+++ b/index.html
@@ -100,20 +100,20 @@
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
             <p>
-              I'm Marissa! A U.S. Army Sergeant with a Secret Security Clearance and 5 years of project management experience. Proficient at leading teams in dynamic, fast-paced environments that are constantly evolving. A servant leader who excels at solving problems and adding value through discovered opportunities. Experienced at managing personnel, budgeting finances, and prioritizing workloads for projects using agile scrum methods to meet requirements. Skillful at analyzing and reducing risks, while continuously improving processes.
+              I'm Marissa! An Army Sergeant with a secret security clearance, 5 years of project management experience, and 2 years of customer service experience. I'm proficient at leading teams in fast-paced environments that are constantly evolving. I'm a servant leader who solves problems and adds value through new opportunities. I'm experienced in managing personnel, budgeting finances, and prioritizing project workloads using agile scrum methods to meet requirements. I'm also skilled in analyzing and reducing risks, while continuously improving processes. I am determined to use the skills I've gained over the last 7 years to become a confident and valuable cybersecurity professional.
             </p>
             <p class="recents">
               My most recent technical accomplishments:
               <ul>
-                <li>I collaborated with professional software engineers to develop my Information Technology portfolio/website which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
-                <li>I am currently studying for my CompTIA Network+ certification and I will also start my Google Information Technology Support Professional Certificate on March 29, 2023 using Coursera. These certifications will assist me with displaying my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills in professional environments.</li>
+                <li>Collaborated with professional software engineers to develop my Information Technology portfolio/website which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
+                <li>Currently studying for the CompTIA Network+ certification and the Google Information Technology Support Professional Certificate. These certifications will assist me with displaying my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills in professional environments.</li>
               </ul>
             </p>
             <p class="recents">
               My 3-year plan:
               <ul>
-              <li>After earning my Google Information Technology Support Professional Certificate and my CompTIA Network+ certificate my next certification to obtain will be the CompTIA Security+ certificate. 
-              <li>I will also attend Western Governors University to get my bachelor's degree in Cybersecurity and Information Assurance. My goal is to graduate in 2025 so I can successfully transition into a Cybersecurity Analyst role.</li></li>
+              <li>After earning my Google Information Technology Support Professional Certificate and my CompTIA Network+ certificate I will obtain my CompTIA Security+ certificate. 
+              <li>I will also attend Western Governors University and graduate with my bachelor's degree in Cybersecurity and Information Assurance by 2026.</li></li>
             </ul>
           </p>
           </div>
@@ -229,7 +229,7 @@
                   <i class="fa-solid fa-cubes"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">1.3M</h2>
+                  <h2 class="counter">$1M</h2>
                   <h3>Assets Managed</h3>
                 </div>
               </div>
