--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a class="nav-link" href="#stats">Stats</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Favorites</a>
+            <a class="nav-link" href="#projects">Certifications</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" href="#media">Media</a>
@@ -100,19 +100,20 @@
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
             <p>
-              I'm Marissa! An Army Sergeant with a secret security clearance, 5 years of project management experience, and 2 years of customer service experience. I'm proficient at leading teams in fast-paced environments that are constantly evolving. I'm a servant leader who solves problems and adds value through new opportunities. I'm experienced in managing personnel, budgeting finances, and prioritizing project workloads using agile scrum methods to meet requirements. I'm also skilled in analyzing and reducing risks, while continuously improving processes. I am determined to use the skills I've gained over the last 7 years to become a confident and valuable cybersecurity professional.
+              I'm Marissa! An Army Sergeant with a secret security clearance, 5 years of project management experience, and 8 years of customer service experience. I'm proficient at leading teams in fast-paced environments that are constantly evolving. I'm a servant leader who solves problems and adds value through new opportunities. I'm experienced in managing personnel, budgeting finances, and prioritizing project workloads using agile scrum methods to meet requirements. I'm also skilled in analyzing and reducing risks, while continuously improving processes. I am determined to use the skills I've gained over the last 8 years to become a confident and valuable cybersecurity professional.
             </p>
             <p class="recents">
-              My most recent technical accomplishments:
+              My most recent technical endeavors:
               <ul>
-                <li>Collaborated with professional software engineers to develop my Information Technology portfolio/website which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
-                <li>Currently studying for the CompTIA Network+ certification and the Google Information Technology Support Professional Certificate. These certifications will assist me with displaying my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills in professional environments.</li>
+                <li>Collaborated with professional software engineers to develop my Information Technology portfolio which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
+                <li>Completed and recieved my Google Information Technology Technical Support Fundamentals Certificate.</li>
+                <li>Currently completing (module 2 of 5) Google's Information Technology Support Professional Certificate. This Certificate will allow me to gain and display my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills.</li>
               </ul>
             </p>
             <p class="recents">
               My 3-year plan:
               <ul>
-              <li>After earning my Google Information Technology Support Professional Certificate and my CompTIA Network+ certificate I will obtain my CompTIA Security+ certificate. 
+              <li>After earning my Google Information Technology Support Professional Certificate I will obtain the CompTIA Network+ certificate and CompTIA Security+ certificate. 
               <li>I will also attend Western Governors University and graduate with my bachelor's degree in Cybersecurity and Information Assurance by 2026.</li></li>
             </ul>
           </p>
@@ -242,8 +243,8 @@
                   <i class="fa-solid fa-brain"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">2</h2>
-                  <h3>Languages</h3>
+                  <h2 class="counter">1</h2>
+                  <h3>Certifications</h3>
                 </div>
               </div>
             </div>
@@ -267,9 +268,14 @@
     </div>
 
    <div id="projects" class="projects">
-      <h2>Favorites</h2>
-      <div class="projects-container">
-        <div class="projone">
+    <h2>Certifications</h2>
+    <div class="projone">
+        <img
+        class="gglcert"
+        style="height:600px; width:950px;"
+        src="images/ITFundCert.png"/>
+</div>
+        <!-- <div class="projone">
           <div class="proj-w-btn">
             <img
               class="fit-log"
@@ -308,7 +314,7 @@
     </div>
   </div>
 
-    <!-- <div id="projects" class="projects">
+   <div id="projects" class="projects">
       <h2>Projects</h2>
       <div class="projects-container">
         <div class="projone">
@@ -388,8 +394,8 @@
     </div>
         </div>
       </div>
-    </div>
-  </div> -->
+    </div>-->
+  </div> 
 
     <!-- <div id="media" class="mediaSection section">
       <div class="container">
