--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
             <p>
-              I'm Marissa! An Army Sergeant with a secret security clearance, 5 years of project management experience, and 8 years of customer service experience. I'm proficient at leading teams in fast-paced environments that are constantly evolving. I'm a servant leader who solves problems and adds value through new opportunities. I'm experienced in managing personnel, budgeting finances, and prioritizing project workloads using agile scrum methods to meet requirements. I'm also skilled in analyzing and reducing risks, while continuously improving processes. I am determined to use the skills I've gained over the last 8 years to become a confident and valuable cybersecurity professional.
+              I'm Marissa! An Army Sergeant with a secret security clearance, 5 years of project management experience, and 8 years of customer service experience. I'm proficient at leading teams in fast-paced environments that are constantly evolving. I'm a servant leader who solves problems and adds value through new opportunities. I'm experienced in managing personnel, budgeting finances, and prioritizing project workloads using agile scrum methods to meet requirements. I'm also skilled in analyzing and reducing risks, while continuously improving processes. I'm determined to use the skills I've gained over the last 8 years to become a confident and valuable cybersecurity professional.
             </p>
             <p class="recents">
               My most recent technical endeavors:
               <ul>
-                <li>Collaborated with professional software engineers to develop my Information Technology portfolio which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
-                <li>Completed and recieved my Google Information Technology Technical Support Fundamentals Certificate.</li>
-                <li>Currently completing (module 2 of 5) Google's Information Technology Support Professional Certificate. This Certificate will allow me to gain and display my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills.</li>
+                <li>Collaborated with professional software engineers to develop my I.T. portfolio which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
+                <li>Completed and recieved my Google Course Certificate in Technical Support Fundamentals.</li>
+                <li>Currently completing Google's I.T. Support Professional Certificate, module 2 of 5, Bits and Bytes of Computer Networking. This Certificate will allow me to gain and display my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills.</li>
               </ul>
             </p>
             <p class="recents">
               My 3-year plan:
               <ul>
-              <li>After earning my Google Information Technology Support Professional Certificate I will obtain the CompTIA Network+ certificate and CompTIA Security+ certificate. 
-              <li>I will also attend Western Governors University and graduate with my bachelor's degree in Cybersecurity and Information Assurance by 2026.</li></li>
+              <li>After earning my Google I.T. Support Professional Certificate I will obtain the CompTIA Network+ certificate and CompTIA Security+ certificate.</li> 
+              <li>I will also attend Western Governors University and graduate with my bachelor's degree in Cybersecurity and Information Assurance by 2026.</li>
             </ul>
           </p>
           </div>
@@ -272,7 +272,7 @@
     <div class="projone">
         <img
         class="gglcert"
-        style="height:600px; width:950px;"
+        style="height:700px; width:950px;"
         src="images/ITFundCert.png"/>
 </div>
         <!-- <div class="projone">
