--- a/index.html
+++ b/index.html
@@ -269,11 +269,12 @@
 
    <div id="projects" class="projects">
     <h2>Certifications</h2>
-    <div class="projone">
+    <div class="projone"><a href=https://www.coursera.org/account/accomplishments/verify/9WD3G8EPECXY target="
+      ">
         <img
         class="gglcert"
         style="height:700px; width:950px;"
-        src="images/ITFundCert.png"/>
+        src="images/ITFundCert.png"/></a>
 </div>
         <!-- <div class="projone">
           <div class="proj-w-btn">
