new cert aquired

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a class="nav-link" href="#stats">Stats</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Certifications</a>
+            <a class="nav-link" href="#projects">Certificates</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" href="#media">Media</a>
@@ -106,14 +106,14 @@
               My most recent technical endeavors:
               <ul>
                 <li>Collaborated with professional software engineers to develop my I.T. portfolio which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
-                <li>Completed and recieved my Google Course Certificate in Technical Support Fundamentals.</li>
-                <li>Currently completing Google's I.T. Support Professional Certificate, module 2 of 5, Bits and Bytes of Computer Networking. This Certificate will allow me to gain and display my knowledge of technical support, computer networking, operating systems, system administration, I.T. infrastructure, and I.T. security skills.</li>
+                <li>Completed and received two Google Course Certificates: Google Technical Support Fundamentals and Google Computer Networking.</li>
+                <li>Currently completing Google's I.T. Support Professional Certificate, course 3 of 5, Operating Systems and You: Becoming a Power User. This course will allow me to gain experience with the main components of an operating system and how to perform critical tasks like managing software and users, and configuring hardware.</li>
               </ul>
             </p>
             <p class="recents">
               My 3-year plan:
               <ul>
-              <li>After earning my Google I.T. Support Professional Certificate I will obtain the CompTIA Network+ certificate and CompTIA Security+ certificate.</li> 
+              <li>After earning my Google I.T. Support Professional Certificate I will obtain the CompTIA Network+ certification and CompTIA Security+ certification.</li> 
               <li>I will also attend Western Governors University and graduate with my bachelor's degree in Cybersecurity and Information Assurance by 2026.</li>
             </ul>
           </p>
@@ -243,8 +243,8 @@
                   <i class="fa-solid fa-brain"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">1</h2>
-                  <h3>Certifications</h3>
+                  <h2 class="counter">2</h2>
+                  <h3>Certificates</h3>
                 </div>
               </div>
             </div>
@@ -268,32 +268,31 @@
     </div>
 
    <div id="projects" class="projects">
-    <h2>Certifications</h2>
-    <div class="projone"><a href=https://www.coursera.org/account/accomplishments/verify/9WD3G8EPECXY target="
-      ">
-        <img
-        class="gglcert"
-        style="height:700px; width:950px;"
-        src="images/ITFundCert.png"/></a>
-</div>
-        <!-- <div class="projone">
+    <h2>Certificates</h2>
+        <div class="projone">
           <div class="proj-w-btn">
+            <a href=https://www.coursera.org/account/accomplishments/verify/9WD3G8EPECXY target="
+      ">
             <img
               class="fit-log"
-              src="images/atomic-habits.jpeg"
-              style="width: 550px; height: 300px"/>
-              <h3>Book: Atomic Habits</h3>
+              src="images/ITFundCert.png"
+              style="width: 550px; height: 400px"/>
+          </a>
+              <h3>Technical Support Fundamentals</h3>
         </div>
 
           <div class="proj-w-btn">
+            <a href=https://www.coursera.org/account/accomplishments/verify/NYX6Z9HK32JS target="
+      ">
           <img
               class="land"
-              src="images/robdial.png"
-              style="width: 550px; height: 300px"/>
-              <h3>Podcast: The Mindset Mentor</h3>
+              src="images/BitsAndBytesNetworking.png"
+              style="width: 550px; height: 400px"/>
+              </a><h3>Bits & Bytes of Computer Networking</h3>
+              
       </div>
     </div>
-        
+        <!-- 
         <div class="projtwo">
           <div class="proj-w-btn">
               <img
