MP-102 Update-nice-to-meet-you-section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
             <p>
-              I'm Marissa! An Army Sergeant with a secret security clearance, 5 years of project management experience, and 8 years of customer service experience. I'm proficient at leading teams in fast-paced environments that are constantly evolving. I'm a servant leader who solves problems and adds value through new opportunities. I'm experienced in managing personnel, budgeting finances, and prioritizing project workloads using agile scrum methods to meet requirements. I'm also skilled in analyzing and reducing risks, while continuously improving processes. I'm determined to use the skills I've gained over the last 8 years to become a confident and valuable cybersecurity professional.
+              I'm Marissa, an IT help desk technician and an Army verteran. I'm proficient in diagnosing and resolving technical issues, providing technical support, and assisting users with computer and software problems. Rooted in discipline from my military background, I bring a detail-oriented approach to ensure efficiency and presicion in problem-solving. As a leader, I prioritize effective communication, foster collaboration, and maintain a commitment to creating a positive team environment. My dedication to excellence is evident in guiding my team through challenges and delivering exceptional customer service. Looking forward, I aim to further advance my technical skills, explore leadership opportunities, and contribute to the dynamic field of information technology, leveraging my unique combination of military and IT expertise.
             </p>
             <p class="recents">
               My most recent technical endeavors:
