MP-104 Update my 3 year plan section

--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
             <p class="recents">
               My 3-year plan:
               <ul>
-              <li>After earning my Google I.T. Support Professional Certificate I will obtain the CompTIA Network+ certification and CompTIA Security+ certification.</li> 
-              <li>I will also attend Western Governors University and graduate with my bachelor's degree in Cybersecurity and Information Assurance by 2026.</li>
+              <li>Now that I have obtained my Google I.T. Support Professional Certificate, I will obtain the CompTIA A+ certification. I will also attend Western Governors University and graduate with my bachelor's degree in Cybersecurity and Information Assurance by 2028.</li>
             </ul>
           </p>
           </div>
