--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="resume" onclick="location.href='images/Marissa Macks Resume 2023.pdf'">Resume</a>
+            <a class="nav-link" id="resume" onclick="location.href='images/Marissa Mack Resume Jan 2024.pdf'">Resume</a>
           </li>
         </ul>
       </div>
