MP-103 Update my most recent technical endeavors section

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
               My most recent technical endeavors:
               <ul>
                 <li>Collaborated with professional software engineers to develop my I.T. portfolio which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
-                <li>Completed and received two Google Course Certificates: Google Technical Support Fundamentals and Google Computer Networking.</li>
-                <li>Currently completing Google's I.T. Support Professional Certificate, course 3 of 5, Operating Systems and You: Becoming a Power User. This course will allow me to gain experience with the main components of an operating system and how to perform critical tasks like managing software and users, and configuring hardware.</li>
+                <li>Successfully completed all of the Google I.T. Support modules, earning my Google Career Certificate in I.T. Support and equipping myself with the skills and knowledge necessary for a successful career in the I.T. field.</li>
+                <li>Completed a 12-week remote I.T. Help Desk internship at The Home Depot, showcasing exceptional performance and technical acumen, leading to a permanent role as a Help Desk Technician at The Home Depot, a Fortune 100 company.</li>
               </ul>
             </p>
             <p class="recents">
