--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
             <p>
-              I'm Marissa, an IT help desk technician, and an Army veteran. I'm proficient in diagnosing and resolving technical issues, providing technical support, and assisting users with computer and software problems. Rooted in discipline from my military background, I bring a detail-oriented approach to ensure efficiency and precision in problem-solving. As a leader, I prioritize effective communication, foster collaboration, and maintain a commitment to creating a positive team environment. My dedication to excellence is evident in guiding my team through challenges and delivering exceptional customer service. Looking forward, I aim to further advance my technical skills, explore leadership opportunities, and contribute to the dynamic field of information technology, leveraging my unique combination of military and IT expertise.
+              I'm a U.S. Army veteran and a Home Depot I.T. Help Desk Technician with an active secret clearance and a Google Career Certificate in I.T. Support. I’m proficient in diagnosing and resolving technical issues, providing technical support, and assisting users with computer and software problems. Rooted in discipline from my military background, I bring a detail-oriented approach to ensure efficiency and precision in problem-solving. Looking forward, I aim to advance my technical skills further, explore leadership opportunities, and contribute to the U.S. government's dynamic field of information technology, leveraging my unique combination of military and I.T. expertise.
             </p>
             <p class="recents">
               My most recent technical endeavors:
@@ -108,12 +108,13 @@
                 <li>Collaborated with professional software engineers to develop my I.T. portfolio which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
                 <li>Successfully completed all of the Google I.T. Support modules, earning my Google Career Certificate in I.T. Support and equipping myself with the skills and knowledge necessary for a successful career in the I.T. field.</li>
                 <li>Completed a 12-week remote I.T. Help Desk internship at The Home Depot, showcasing exceptional performance and technical acumen, leading to a permanent role as a Help Desk Technician at The Home Depot, a Fortune 100 company.</li>
+                <li>Currently pursuing the CompTIA A+ certification to enhance technical proficiency and demonstrate expertise in fundamental IT skills.</li>
               </ul>
             </p>
             <p class="recents">
               My 3-year plan:
               <ul>
-              <li>Now that I have obtained my Google I.T. Support Professional Certificate, I will obtain the CompTIA A+ certification. I will also attend Western Governors University and graduate with my bachelor's degree in Cybersecurity and Information Assurance by 2028.</li>
+              <li>Commencing in May 2024, I will be enrolling at Western Governors University to earn a bachelor’s degree in Cybersecurity and Information Assurance, anticipated to be completed by 2028.</li>
             </ul>
           </p>
           </div>
