--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
             <div class="squareItem">
               <div class="squareInnerContainer">
                 <div class="squareIcon">
-                  <i class="fa-solid fa-cube"></i>
+                  <i class="fa-solid fa-screwdriver-wrench"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">4</h2>
-                  <h3>Projects</h3>
+                  <h2 class="counter">95%</h2>
+                  <h3>Resolution Rate</h3>
                 </div>
               </div>
             </div>
@@ -227,11 +227,11 @@
             <div class="squareItem">
               <div class="squareInnerContainer">
                 <div class="squareIcon">
-                  <i class="fa-solid fa-cubes"></i>
+                  <i class="fa-solid fa-ticket"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">$1M</h2>
-                  <h3>Assets Managed</h3>
+                  <h2 class="counter">250</h2>
+                  <h3>Tickets Resolved</h3>
                 </div>
               </div>
             </div>
@@ -243,8 +243,8 @@
                   <i class="fa-solid fa-brain"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">2</h2>
-                  <h3>Certificates</h3>
+                  <h2 class="counter">8</h2>
+                  <h3>Certificates Earned</h3>
                 </div>
               </div>
             </div>
@@ -253,11 +253,11 @@
             <div class="squareItem">
               <div class="squareInnerContainer">
                 <div class="squareIcon">
-                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-solid fa-laptop"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">15</h2>
-                  <h3>Repositories</h3>
+                  <h2 class="counter">50</h2>
+                  <h3>Devices Replaced</h3>
                 </div>
               </div>
             </div>
