--- a/index.html
+++ b/index.html
@@ -280,7 +280,6 @@
           </a>
               <h3>Technical Support Fundamentals</h3>
         </div>
-
           <div class="proj-w-btn">
             <a href=https://www.coursera.org/account/accomplishments/verify/NYX6Z9HK32JS target="
       ">
@@ -288,24 +287,86 @@
               class="land"
               src="images/BitsAndBytesNetworking.png"
               style="width: 550px; height: 400px"/>
-              </a><h3>Bits & Bytes of Computer Networking</h3>
-              
+              </a><h3>Computer Networking</h3>
       </div>
     </div>
+    <div class="projone">
+      <div class="proj-w-btn">
+        <a href=https://www.coursera.org/account/accomplishments/certificate/DMPKNHC8N4PP target="
+  ">
+        <img
+          class="fit-log"
+          src="images/Operating Systems.png"
+          style="width: 550px; height: 400px"/>
+      </a>
+          <h3>Operating Systems</h3>
+    </div>
+      <div class="proj-w-btn">
+        <a href=https://www.coursera.org/account/accomplishments/certificate/7RV8G9A6XHNA target="
+  ">
+      <img
+          class="land"
+          src="images/System Administration.png"
+          style="width: 550px; height: 400px"/>
+          </a><h3>System Administration</h3>
+  </div>
+</div>
+<div class="projone">
+  <div class="proj-w-btn">
+    <a href=https://www.coursera.org/account/accomplishments/certificate/EST7NJ4TW22V target="
+">
+    <img
+      class="fit-log"
+      src="images/IT Security.png"
+      style="width: 550px; height: 400px"/>
+  </a>
+      <h3>I.T. Security</h3>
+</div>
+  <div class="proj-w-btn">
+    <a href=https://www.coursera.org/account/accomplishments/specialization/certificate/D6XU7Y6SPZLT target="
+">
+  <img
+      class="land"
+      src="images/Google IT Support Cert.png"
+      style="width: 550px; height: 400px"/>
+      </a><h3>Google I.T. Support Certificate</h3>
+</div>
+</div>
+<div class="projone">
+  <div class="proj-w-btn">
+    <a href=https://www.coursera.org/account/accomplishments/certificate/PNMR82KYXSHH target="
+">
+    <img
+      class="fit-log"
+      src="images/Cybersecurity Foundations.png"
+      style="width: 550px; height: 400px"/>
+  </a>
+      <h3>Cybersecurity Foundations</h3>
+</div>
+  <div class="proj-w-btn">
+    <a href=https://www.coursera.org/account/accomplishments/certificate/76PAMCLYYSG9 target="
+">
+  <img
+      class="land"
+      src="images/Managing IT Security Risk.png"
+      style="width: 550px; height: 400px"/>
+      </a><h3>Managing IT Security Risk</h3>
+</div>
+</div>
         <!-- 
         <div class="projtwo">
           <div class="proj-w-btn">
               <img
                 class="land"
                 src="images/pmesser.png"
-                style="width: 550px; height: 300px"/>
+                style="width: 550px; height: 400px"/>
                 <h3>YouTube: Professor Messer</h3>
         </div>
           <div class="proj-w-btn">
             <img
               class="dice"
               src="images/freecodecampp.webp"
-              style="width: 550px; height: 300px"/>
+              style="width: 550px; height: 400px"/>
               <h3>YouTube: freecodecamp</h3>
       </div>
         </div>
