MP-113 Fix IT typos

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <li>Collaborated with professional software engineers to develop my I.T. portfolio which uses technologies like HTML5, CSS3, JavaScript, Google APIs, VS Code, Chrome Developer Tools, Git, GitHub, Linux, and Jira.</li>
                 <li>Successfully completed all of the Google I.T. Support modules, earning my Google Career Certificate in I.T. Support and equipping myself with the skills and knowledge necessary for a successful career in the I.T. field.</li>
                 <li>Completed a 12-week remote I.T. Help Desk internship at The Home Depot, showcasing exceptional performance and technical acumen, leading to a permanent role as a Help Desk Technician at The Home Depot, a Fortune 100 company.</li>
-                <li>Currently pursuing the CompTIA A+ certification to enhance technical proficiency and demonstrate expertise in fundamental IT skills.</li>
+                <li>Currently pursuing the CompTIA A+ certification to enhance technical proficiency and demonstrate expertise in fundamental I.T. skills.</li>
               </ul>
             </p>
             <p class="recents">
@@ -324,7 +324,7 @@
       class="land"
       src="images/Managing IT Security Risk.png"
       style="width: 550px; height: 400px"/>
-      </a><h3>Managing IT Security Risk</h3>
+      </a><h3>Managing I.T. Security Risk</h3>
 </div>
 </div>
         <!-- 
