MP-114 Change Stats to analytics

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#stats">Stats</a>
+            <a class="nav-link" href="#stats">Analytics</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projects">Certificates</a>
@@ -184,7 +184,7 @@
     </div>
     <div id="stats" class="statsSection section">
       <div class="container">
-        <h2>Stats</h2>
+        <h2>Analytics</h2>
         <div class="row">
           <div class="col-md-3 col-sm-6">
             <div class="squareItem">
