Updated portfolio for new role

--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
             <p>
-              I'm a U.S. Army veteran and a Home Depot I.T. Help Desk Technician with an active secret security clearance and a Google Career Certificate in I.T. Support. I’m proficient in diagnosing and resolving technical issues, providing technical support, and assisting users with computer and software problems. Rooted in discipline from my military background, I bring a detail-oriented approach to ensure efficiency and precision in problem-solving. Looking forward, I aim to advance my technical skills further, explore leadership opportunities, and contribute to the U.S. government's dynamic field of information technology, leveraging my unique combination of military and I.T. expertise.
+              I'm a U.S. Army veteran, presently a Classroom Support Personnel Technician at the U.S. Army Institute for Religious Leadership with an active secret clearance and a Google Career Certificate in I.T. Support. I’m actively in the process of completing my CompTIA A+ certification with part 1 of 2 completed. While providing time sensitive and professional technical support, I’m proficient in identifying, diagnosing, and resolving tier 1 classroom and student laptop technical issues. Rooted in discipline from my military background, I bring a focused approach to ensure efficiency and precision in problem-solving to best support my customers and classrooms. 
             </p>
             <p class="recents">
               My most recent technical endeavors:
               <ul>
-                <li>Completed a 12-week remote I.T. Help Desk internship at The Home Depot, showcasing exceptional performance and technical acumen, leading to a permanent role as a Help Desk Technician at The Home Depot, a Fortune 100 company.</li>
-                <li>Successfully completed all of the Google I.T. Support modules, earning my Google Career Certificate in I.T. Support and equipping myself with the skills and knowledge necessary for a successful career in the I.T. field.</li>
-                <li>Currently pursuing the CompTIA A+ certification to enhance technical proficiency and demonstrate expertise in fundamental I.T. skills.</li>
-                <li>Currently pursuing a bachelor’s degree in Cybersecurity and Information Assurance, anticipated to be completed by 2028.</li>
+                <li>Currently serving as an outstanding Classroom Support Personnel Technician/I.T. Administrator at the U.S. Army Institute for Religious Leadership.</li>
+                <li>Completed a 12-week I.T. Help Desk internship at The Home Depot, showcasing exceptional performance and technical acumen, leading to a permanent role as a Help Desk Technician at The Home Depot.</li>
+                <li>Completed the CompTIA A+ Core 1 to enhance technical proficiency and demonstrate expertise in mobile devices, networking, hardware, virtualization, cloud and troubleshooting. Core 2 completion is currently in progress.</li>
+                <li>Successfully completed all of the Google I.T. Support modules, earning my Google Career Certificate in I.T. Support and equipping myself with the skills and knowledge necessary for a successful career in tech.</li>
               </ul>
             </p>
             <!-- <p class="recents">
@@ -190,50 +190,51 @@
             <div class="squareItem">
               <div class="squareInnerContainer">
                 <div class="squareIcon">
-                  <i class="fa-solid fa-screwdriver-wrench"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">95%</h2>
-                  <h3>Resolution Rate</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fa-solid fa-ticket"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">250</h2>
-                  <h3>Tickets Resolved</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fa-solid fa-brain"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">8</h2>
-                  <h3>Certificates Earned</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
+                  
                   <i class="fa-solid fa-laptop"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">50</h2>
-                  <h3>Devices Replaced</h3>
+                  <h2 class="counter">300+</h2>
+                  <h3>Laptops Maintained</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="squareItem">
+              <div class="squareInnerContainer">
+                <div class="squareIcon">
+                  <i class="fa-solid fa-desktop"></i>
+                </div>
+                <div class="squareContent">
+                  <h2 class="counter">15</h2>
+                  <h3>Desktops Maintained</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="squareItem">
+              <div class="squareInnerContainer">
+                <div class="squareIcon">
+                  <i class="fa-solid fa-house-laptop"></i>
+                </div>
+                <div class="squareContent">
+                  <h2 class="counter">19</h2>
+                  <h3>Classrooms Maintained</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="squareItem">
+              <div class="squareInnerContainer">
+                <div class="squareIcon">
+                  <i class="fa-solid fa-screwdriver-wrench"></i>
+                </div>
+                <div class="squareContent">
+                  <h2 class="counter"><42 hrs</h2>
+                  <h3>Turn Around Time</h3>
                 </div>
               </div>
             </div>
