--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
             <p class="recents">
               My most recent technical endeavors:
               <ul>
-                <li>Currently serving as an outstanding Classroom Support Personnel Technician/I.T. Administrator at the U.S. Army Institute for Religious Leadership.</li>
+                <li>I am currently a Classroom Support Personnel Technician at the U.S. Army Institute for Religious Leadership, managing over 300 laptops, 15 desktops, and 19 classrooms with a maintenance turnaround time of under 42 hours.</li>
                 <li>Completed a 12-week I.T. Help Desk internship at The Home Depot, showcasing exceptional performance and technical acumen, leading to a permanent role as a Help Desk Technician at The Home Depot.</li>
-                <li>Completed the CompTIA A+ Core 1 to enhance technical proficiency and demonstrate expertise in mobile devices, networking, hardware, virtualization, cloud and troubleshooting. Core 2 completion is currently in progress.</li>
-                <li>Successfully completed all of the Google I.T. Support modules, earning my Google Career Certificate in I.T. Support and equipping myself with the skills and knowledge necessary for a successful career in tech.</li>
+                <li>Served as a voluntary Classroom Support Personnel Technician intern at the U.S. Army Institute for Religious Leadership, where demonstrated technical and support skills earned a transition to a permanent role.</li>
+                <li>Completed the CompTIA A+ Core 1 to enhance technical proficiency and demonstrate expertise in mobile devices, networking, hardware, virtualization, cloud and troubleshooting. Core 2 is in progress.</li>
               </ul>
             </p>
             <!-- <p class="recents">
@@ -131,9 +131,9 @@
           </div>
             <div class="the-stack">
             <img 
-            src="images/server-64.png"
+            src="images/icons8-azure-48.png"
             style="width: 50px; height: 50px"/>
-            <p class="stack">Jump<br>Server</p>
+            <p class="stack">Azure Virtual<br>Desktop</p>
           </div>
             <div class="the-stack">
             <img 
@@ -297,14 +297,14 @@
   </a>
       <h3>I.T. Security</h3>
 </div>
-  <div class="proj-w-btn">
-    <a href=https://www.coursera.org/account/accomplishments/specialization/certificate/D6XU7Y6SPZLT target="
+<div class="proj-w-btn">
+  <a href=https://www.coursera.org/account/accomplishments/certificate/76PAMCLYYSG9 target="
 ">
-  <img
-      class="land"
-      src="images/Google IT Support Cert.png"
-      style="width: 550px; height: 400px"/>
-      </a><h3>Google I.T. Support Certificate</h3>
+<img
+    class="land"
+    src="images/Managing IT Security Risk.png"
+    style="width: 550px; height: 400px"/>
+    </a><h3>Managing I.T. Security Risk</h3>
 </div>
 </div>
 <div class="projone">
@@ -318,14 +318,15 @@
   </a>
       <h3>Cybersecurity Foundations</h3>
 </div>
-  <div class="proj-w-btn">
-    <a href=https://www.coursera.org/account/accomplishments/certificate/76PAMCLYYSG9 target="
+
+<div class="proj-w-btn">
+  <a href=https://www.coursera.org/account/accomplishments/specialization/certificate/D6XU7Y6SPZLT target="
 ">
-  <img
-      class="land"
-      src="images/Managing IT Security Risk.png"
-      style="width: 550px; height: 400px"/>
-      </a><h3>Managing I.T. Security Risk</h3>
+<img
+    class="land"
+    src="images/Google IT Support Cert.png"
+    style="width: 550px; height: 400px"/>
+    </a><h3>Google I.T. Support Certificate</h3>
 </div>
 </div>
         <!-- 
