--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#stats">Analytics</a>
+            <a class="nav-link" href="#stats">Certifications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projects">Certificates</a>
@@ -80,7 +80,7 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="resume" onclick="location.href='images/Marissa Mack Resume 2024.pdf'">Resume</a>
+            <a class="nav-link" id="resume" onclick="location.href='images/Marissa Mack Sys Admin Resume.pdf'">Resume</a>
           </li>
         </ul>
       </div>
@@ -95,17 +95,17 @@
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
             <p>
-              I'm a U.S. Army veteran, presently a Classroom Support Personnel Technician at the U.S. Army Institute for Religious Leadership with an active secret clearance and a Google Career Certificate in I.T. Support. I’m actively in the process of completing my CompTIA A+ certification with part 1 of 2 completed. While providing time sensitive and professional technical support, I’m proficient in identifying, diagnosing, and resolving tier 1 classroom and student laptop technical issues. Rooted in discipline from my military background, I bring a focused approach to ensure efficiency and precision in problem-solving to best support my customers and classrooms. 
+                I’m a U.S. Army Disabled Veteran and IT Support Technician with an active Secret clearance, a CompTIA A+ certification, and a Google Career Certificate in IT Support. I have over two and a half years of hands-on experience in IT operations, hardware support, customer service, network troubleshooting, and working in Active Directory and Entra ID environments. I currently support the U.S. Army Chaplain Center and School, where I provide timely and professional technical support to federal staff and students. I’m skilled at identifying, diagnosing, and resolving a wide range of IT incidents. With a strong foundation in discipline and mission focus from my military background, I bring a detail-oriented and efficient approach to ensuring system reliability and operational support.
             </p>
-            <p class="recents">
-              My most recent technical endeavors:
-              <ul>
-                <li>I am currently a Classroom Support Personnel Technician at the U.S. Army Institute for Religious Leadership, managing over 300 laptops, 15 desktops, and 19 classrooms with a maintenance turnaround time of under 42 hours.</li>
-                <li>Completed a 12-week I.T. Help Desk internship at The Home Depot, showcasing exceptional performance and technical acumen, leading to a permanent role as a Help Desk Technician at The Home Depot.</li>
-                <li>Served as a voluntary Classroom Support Personnel Technician intern at the U.S. Army Institute for Religious Leadership, where demonstrated technical and support skills earned a transition to a permanent role.</li>
-                <li>Completed the CompTIA A+ Core 1 to enhance technical proficiency and demonstrate expertise in mobile devices, networking, hardware, virtualization, cloud and troubleshooting. Core 2 is in progress.</li>
-              </ul>
-            </p>
+              <p class="recents">
+                My most recent technical endeavors:
+                <ul>
+                  <li>As an IT Administrator, I was responsible for over 300 laptops, 15 desktops, and 19 classrooms, supporting audiovisual and IT infrastructure with a maintenance turnaround time of under 42 hours.</li>
+                  <li>I previously worked at The Home Depot Technology Support Center, providing 24/7 Tier 1 support, incident triage, and escalation using ServiceNow while supporting enterprise systems, networks, and security tools in a fast-paced environment.</li>
+                  <li>I earned the CompTIA A+ certification to validate hands-on skills in hardware, networking, mobile devices, virtualization, and troubleshooting.</li>
+                  <li>I am actively pursuing my CompTIA Security+ certification and expect to complete it by Fall 2025.</li>
+                </ul>
+              </p>
             <!-- <p class="recents">
               My 3-year plan:
               <ul>
@@ -184,62 +184,15 @@
     </div>
     <div id="stats" class="statsSection section">
       <div class="container">
-        <h2>Analytics</h2>
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  
-                  <i class="fa-solid fa-laptop"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">300+</h2>
-                  <h3>Laptops Maintained</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fa-solid fa-desktop"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">15</h2>
-                  <h3>Desktops Maintained</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fa-solid fa-house-laptop"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">19</h2>
-                  <h3>Classrooms Maintained</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fa-solid fa-screwdriver-wrench"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter"><42 hrs</h2>
-                  <h3>Turn Around Time</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <h2 class="mb-4">Certifications</h2>
+        <div class="row justify-content-center">
+  <div class="col-auto">
+    <img
+      class="fit-log mb-4"
+      src="images/comptiaaplus.png"
+      style="width: 550px; height: 400px" />
+  </div>
+</div>
       </div>
     </div>
    <div id="projects" class="projects">
@@ -488,7 +441,7 @@
   </div>
     <div class="copyrightSection">
       <div class="col-md-12 text-center">
-        <p>&copy; Copyright Marissa Mack 2024</p>
+        <p>&copy; Copyright Marissa Mack 2025</p>
       </div>
     </div>
     <script src="js/typed.js"></script>
