update for sys admin role

--- a/index.html
+++ b/index.html
@@ -186,11 +186,12 @@
       <div class="container">
         <h2 class="mb-4">Certifications</h2>
         <div class="row justify-content-center">
-  <div class="col-auto">
+  <div class="col-auto text-center">
     <img
-      class="fit-log mb-4"
+      class="fit-log mt-2"
       src="images/comptiaaplus.png"
       style="width: 550px; height: 400px" />
+      <h3 class="comptia">CompTIA A+</h3>
   </div>
 </div>
       </div>
